fix(account): correct text wrapping in table

--- a/src/app/assets/css/app.css
+++ b/src/app/assets/css/app.css
@@ -72,7 +72,7 @@
   }
 
   td {
-    @apply px-4 py-6 whitespace-nowrap;
+    @apply px-4 py-6;
   }
 
   th {
